Name:                hask-monkey
Version:             0.0.1
Cabal-Version:       >= 1.8
Synopsis:            Function application monkey that speculatively applies expressions
Category:            Graphics, GUI
Description: 
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan@gmail.com>
Stability:           experimental
Build-Type:          Simple

executable hask-monkey 
  Main-Is:           Main.hs
  Hs-Source-Dirs:    src
  Build-Depends:     base >= 4 && < 4.7,
                     comonad,
                     containers,
                     directory,
                     filepath,
                     haskell-src-exts,
                     hint,
                     lens,
                     mtl,
                     syb,
                     template-haskell
  Other-Modules:     ActiveHs.Simple
